[gd_scene load_steps=10 format=3 uid="uid://cqnj5lbqtyprd"]

[ext_resource type="Script" path="res://levels/god_script.gd" id="1_3n2wy"]
[ext_resource type="PackedScene" uid="uid://c67dvisjejmey" path="res://levels/effects/void_1_bg.tscn" id="1_nne0f"]
[ext_resource type="PackedScene" uid="uid://bn20l7cjclmh6" path="res://levels/hangar/stage_hangar.tscn" id="4_rwf17"]
[ext_resource type="PackedScene" uid="uid://58uwhr5waftp" path="res://levels/en_spawner.tscn" id="5_yfa6y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6u7c"]
size = Vector2(632, 91.973)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iw388"]
size = Vector2(640, 63.9999)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppn25"]
size = Vector2(113, 876)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4o3g6"]
size = Vector2(112.5, 876)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1qxv"]
size = Vector2(648, 66)

[node name="Mission0" type="Node2D"]
script = ExtResource("1_3n2wy")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfiniteVoidBG" parent="." instance=ExtResource("1_nne0f")]

[node name="StageHangar" parent="." instance=ExtResource("4_rwf17")]
visible = false

[node name="Margin_UI" type="CanvasLayer" parent="."]
visible = false

[node name="PlayableBound" type="StaticBody2D" parent="."]
collision_layer = 16

[node name="BFloor" type="CollisionShape2D" parent="PlayableBound"]
position = Vector2(300, 848)
shape = SubResource("RectangleShape2D_m6u7c")

[node name="BCeiling" type="CollisionShape2D" parent="PlayableBound"]
position = Vector2(304, -24.0001)
rotation = 3.14159
shape = SubResource("RectangleShape2D_iw388")

[node name="BWallR" type="CollisionShape2D" parent="PlayableBound"]
position = Vector2(664, 390)
shape = SubResource("RectangleShape2D_ppn25")

[node name="BWallL" type="CollisionShape2D" parent="PlayableBound"]
position = Vector2(-56.25, 418)
shape = SubResource("RectangleShape2D_4o3g6")

[node name="kill_void" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_void"]
position = Vector2(308, 1120)
shape = SubResource("RectangleShape2D_l1qxv")

[node name="EnSpawner" parent="." instance=ExtResource("5_yfa6y")]

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PlrSpawnPos" type="Marker2D" parent="."]
position = Vector2(296, 704)
scale = Vector2(0.6, 0.6)

[connection signal="area_entered" from="kill_void" to="." method="_on_kill_void_area_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
